--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 						</span>
 					</a>
 					<div class="menu">
+						<a class="menu-logo" href="#">
+							<div class="menu-logo__icon">
+								<img class="menu-logo__img" src="images/logo/logo.svg" alt="">
+							</div>
+							<span class="menu-logo__name">
+								Product
+							</span>
+						</a>
 						<nav class="nav-menu">
 							<a class="nav-menu__link" href="#">Product</a>
 							<a class="nav-menu__link" href="#">Customers</a>
@@ -184,54 +192,56 @@
 								</p>
 							</div>
 						</div>
-						<div class="management__picture">
+						<!-- <div class="management__picture">
 							<img class="management__image" src="images/content/documents.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
 			<!-- /.management -->
 			<section class="support">
 				<div class="container support__container">
-					<div class="support__picture">
+					<!-- <div class="support__picture">
 						<img class="support__img" src="images/content/search-angines.png" alt="">
-					</div>
-					<div class="support__descript">
-						<p class="overline-text support__overline">
-							Easier decision making for
-						</p>
-						<h2 class="section-title support__title">
-							Customer Support
-						</h2>
-						<p class="section-text support__text">
-							The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
-						</p>
-						<ul class="support-menu">
-							<li class="support-menu__item">
-								<div class="support-menu__item-marker support-menu__item-marker--nth-1"> 
-									<i class="support-menu__marker-icon icon-tick"></i>
-								</div>
-								<span class="support-menu__item-text">
-									Never worry about overpaying for your energy again. 
-								</span>
-							</li>
-							<li class="support-menu__item">
-								<div class="support-menu__item-marker support-menu__item-marker--nth-2"> 
-									<i class="support-menu__marker-icon icon-tick"></i>
-								</div>
-								<span class="support-menu__item-text">
-									We will only switch you to energy companies that we trust and will treat you right 
-								</span>
-							</li>
-							<li class="support-menu__item">
-								<div class="support-menu__item-marker support-menu__item-marker--nth-3"> 
-									<i class="support-menu__marker-icon icon-tick"></i>
-								</div>
-								<span class="support-menu__item-text">
-									We track the markets daily and know where the savings are. 
-								</span>
-							</li>
-						</ul>
+					</div> -->
+					<div class="support__content">
+						<div class="support__descript">
+							<p class="overline-text support__overline">
+								Easier decision making for
+							</p>
+							<h2 class="section-title support__title">
+								Customer Support
+							</h2>
+							<p class="section-text support__text">
+								The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+							</p>
+							<ul class="support-menu">
+								<li class="support-menu__item">
+									<div class="support-menu__item-marker support-menu__item-marker--nth-1"> 
+										<i class="support-menu__marker-icon icon-tick"></i>
+									</div>
+									<span class="support-menu__item-text">
+										Never worry about overpaying for your energy again. 
+									</span>
+								</li>
+								<li class="support-menu__item">
+									<div class="support-menu__item-marker support-menu__item-marker--nth-2"> 
+										<i class="support-menu__marker-icon icon-tick"></i>
+									</div>
+									<span class="support-menu__item-text">
+										We will only switch you to energy companies that we trust and will treat you right 
+									</span>
+								</li>
+								<li class="support-menu__item">
+									<div class="support-menu__item-marker support-menu__item-marker--nth-3"> 
+										<i class="support-menu__marker-icon icon-tick"></i>
+									</div>
+									<span class="support-menu__item-text">
+										We track the markets daily and know where the savings are. 
+									</span>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -266,9 +276,9 @@
 								</p>
 							</div>
 						</div>
-						<div class="collaborative__picture">
+						<!-- <div class="collaborative__picture">
 							<img class="collaborative__image" src="images/content/image-folder.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
@@ -337,7 +347,44 @@
 								</a>
 							</div>
 							<!-- /.strategies-card -->
+							<div class="swiper-slide strategies-card">
+								<div class="strategies-card__picture">
+									<img class="strategies-card__img" src="images/content/contents-3.png" alt="">
+								</div>
+								<a class="strategies-card__link" href="#">
+									<p class="strategies-card__info">
+										By 
+										<span class="strategies-card__user">
+											Wahid Ari
+										</span>
+										|  03 March 2019
+									</p>
+									<h3 class="strategies-card__title">
+										Success Steps For Your Personal Or Business
+									</h3>
+								</a>
+							</div>
+							<!-- /.strategies-card -->
+							<div class="swiper-slide strategies-card">
+								<div class="strategies-card__picture">
+									<img class="strategies-card__img" src="images/content/contents-3.png" alt="">
+								</div>
+								<a class="strategies-card__link" href="#">
+									<p class="strategies-card__info">
+										By 
+										<span class="strategies-card__user">
+											Wahid Ari
+										</span>
+										|  03 March 2019
+									</p>
+									<h3 class="strategies-card__title">
+										Success Steps For Your Personal Or Business
+									</h3>
+								</a>
+							</div>
+							<!-- /.strategies-card -->
 						</div>
+						<div class="swiper-pagination strategies-menu__pagination"></div>
 					</div>
 				</div>
 			</section>
@@ -457,19 +504,19 @@
 						<li class="reviews-card reviews-menu__item">
 							<ul class="reviews-card__raiting">
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star"></i>
+									<i class="reviews-card__icon icon-star"></i>
 								</li>
 							</ul>
 							<p class="reviews-card__text">
@@ -493,19 +540,19 @@
 						<li class="reviews-card reviews-menu__item">
 							<ul class="reviews-card__raiting">
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star"></i>
+									<i class="reviews-card__icon icon-star"></i>
 								</li>
 							</ul>
 							<p class="reviews-card__text">
@@ -529,19 +576,19 @@
 						<li class="reviews-card reviews-menu__item">
 							<ul class="reviews-card__raiting">
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star-fat"></i>
+									<i class="reviews-card__icon icon-star-fat"></i>
 								</li>
 								<li class="reviews-card__star">
-									<i class="reviewa-card__icon icon-star"></i>
+									<i class="reviews-card__icon icon-star"></i>
 								</li>
 							</ul>
 							<p class="reviews-card__text">
@@ -575,9 +622,9 @@
 							</h2>
 							<a class="banner__link" href="#">Get This</a>
 						</div>
-						<div class="banner__picture">
+						<!-- <div class="banner__picture">
 							<img class="banner__img" src="images/content/banner.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
@@ -630,7 +677,7 @@
 					</div>
 					<div class="footer-menu">
 						<h3 class="footer-menu__title">
-							RLegal Stuff
+							Legal Stuff
 						</h3>
 						<ul class="footer-list">
 							<li class="footer-list__item">
@@ -658,15 +705,18 @@
 					</form>
 				</div>
 			</div>
+			<h6 class="copyright">
+				Made With Love By Figmaland All Right Reserved 
+			</h6>
 		</footer>
 		<!-- /.footer -->
 
 	</div>
 
 	<!-- script -->
-	<!-- <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<script src="scripts/main.js"></script>
 	<script src="scripts/burger-menu.js"></script>
-	<script src="scripts/main.js"></script> -->
 
 </body>
 </html>
